modified color for logo, and fixed the horizontal scrolling

--- a/css/electric.css
+++ b/css/electric.css
@@ -20,6 +20,7 @@ font-style: normal;
 body {
 padding-top: 70px;
 height: 100%;
+overflow-x:hidden;
 }
 
 html {
@@ -49,9 +50,9 @@ padding-right: 25px;
 }
 
 /*media query fix for navbar*/
-@media (max-width: 1050px) 
+@media (max-width: 1050px)
 {
-    .navbar-header 
+    .navbar-header
     {
         float: none;
     }
@@ -92,6 +93,14 @@ padding-right: 25px;
 
 
 /*end of navbar fix*/
+
+#brand {
+    font-family: 'Lobster', cursive;
+    color: #063E6D;
+    /*color: #024E6E;*/
+    /*color: #002E48;*/
+}
+
 
 /*start of search bar*/
 .sb-search {
@@ -218,6 +227,10 @@ margin-left: auto;
 margin-right: auto;
 }
 
+#contentwrap {
+width: 100%;
+}
+
 #footer {
 position: relative;
 margin-top -150px;
@@ -247,5 +260,3 @@ float: left;
 width: 0;
 margin-top: -32767px;
 }
-
-
